@@ -401,3 +401,34 @@ system.
 &supported-peripherals.xml;
 
  </sect1>
+
+ <sect1 arch="not-s390" id="hardware-firmware">
+ <title>Devices Requiring Firmware</title>
+<para>
+
+Besides the availability of a device driver, some hardware also requires
+so-called <firstterm>firmware</firstterm> or <firstterm>microcode</firstterm>
+to be loaded into the device before it can become operational. This is most
+common for network interface cards (especially wireless NICs), but for example
+some USB devices and even some hard disk controllers also require firmware.
+
+</para><para>
+
+In most cases firmware is non-free according to the criteria used by the
+&debian; project and thus cannot be included in the main distribution
+or in the installation system. If the device driver itself is included in
+the distribution and if &debian; legally can distribute the firmware,
+it will often be available as a separate package from the non-free section
+of the archive.
+
+</para><para>
+
+However, this does not mean that such hardware cannot be used during an
+installation. Starting with &debian; 5.0, &d-i; supports loading
+firmware files or packages containing firmware from a removable medium,
+such as a floppy disk or USB stick.
+See <xref linkend="loading-firmware"/> for detailed information on how to
+load firmware files or packages during the installation.
+
+</para>
+ </sect1>
