@@ -387,6 +387,7 @@ report installer software problems to Debian developers later.
  </sect1>
 
 &using-d-i-components.xml;
+&loading-firmware.xml;
 
 </chapter>
 
