@@ -38,8 +38,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
     - show which subarches are supported by arm/armel
     - various minor updates and improvements
   * Remove section on X.Org preseeding as all descibed options are obsolete.
+  * Document support in the installer for loading missing firmware.
 
- -- Frans Pop <fjp@debian.org>  Fri, 03 Oct 2008 19:25:46 +0200
+ -- Frans Pop <fjp@debian.org>  Sat, 04 Oct 2008 16:41:11 +0200
 
 installation-guide (20080520) unstable; urgency=medium
 
